Revert "chore: nested install strategy to avoid doppelgänger dependencies"
This reverts commit 46a71bc79970bd748b8828299238bbc1c3f3523d.

--- a/fs/.eslintrc.json
+++ b/fs/.eslintrc.json
@@ -23,6 +23,10 @@
 					{
 						"patterns": [
 							{
+								"group": ["@inlang/test"],
+								"message": "This is just an internal package that does not get published. You should just use it in test.ts files or for files that get bundled."
+							},
+							{
 								"group": ["node:*"],
 								"message": "Keep in mind that node API's don't work inside the browser"
 							}
