--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
 		"./src"
 	],
 	"scripts": {
-		"build": "tsc --build ./tsconfig.build.json",
+		"build": "tsc --build",
 		"dev": "tsc --watch",
 		"test": "vitest run --coverage --test-timeout 60000",
 		"bench": "vitest bench --watch=false",
@@ -25,7 +25,13 @@
 		"@lix-js/fs": "*",
 		"@octokit/types": "11.1.0",
 		"isomorphic-git": "1.24.5",
-		"octokit": "3.1.0"
+		"octokit": "3.1.0",
+		"solid-js": "1.7.11"
 	},
-	"license": "Apache-2.0"
+	"license": "Apache-2.0",
+	"devDependencies": {
+		"@vitest/coverage-v8": "0.34.3",
+		"typescript": "5.2.2",
+		"vitest": "0.34.3"
+	}
 }
