--- a/fs/package.json
+++ b/fs/package.json
@@ -13,7 +13,7 @@
 		"./src"
 	],
 	"scripts": {
-		"build": "tsc --build ./tsconfig.build.json",
+		"build": "tsc --build",
 		"dev": "tsc --watch",
 		"test": "tsc --noEmit && vitest run --passWithNoTests --coverage",
 		"lint": "eslint ./src",
@@ -25,6 +25,9 @@
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
-		"tsd": "^0.28.1"
+		"tsd": "^0.28.1",
+		"@vitest/coverage-v8": "0.34.3",
+		"typescript": "5.2.2",
+		"vitest": "0.34.3"
 	}
 }
