--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,18 @@
 		"./src"
 	],
 	"scripts": {
-		"build": "tsc --build ./tsconfig.build.json",
+		"build": "tsc --build",
 		"dev": "tsc --watch",
 		"test": "tsc --noEmit && vitest run --passWithNoTests --coverage",
 		"lint": "eslint ./src",
 		"format": "prettier ./src --write",
 		"clean": "rm -rf ./dist ./.turbo ./node_modules"
 	},
-	"dependencies": {},
+	"devDependencies": {
+		"@vitest/coverage-v8": "0.34.3",
+		"typescript": "5.2.2",
+		"vitest": "0.34.3"
+	},
 	"peerDependencies": {},
 	"license": "Apache-2.0"
 }
