chore: make lints auto fixing

--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
 		"dev": "tsc --watch",
 		"test": "vitest run --coverage --test-timeout 60000",
 		"bench": "vitest bench --watch=false",
-		"lint": "eslint ./src",
+		"lint": "eslint ./src --fix",
 		"format": "prettier ./src --write",
 		"clean": "rm -rf ./dist ./.turbo ./node_modules"
 	},
