--- a/fs/package.json
+++ b/fs/package.json
@@ -16,7 +16,7 @@
 		"build": "tsc --build",
 		"dev": "tsc --watch",
 		"test": "tsc --noEmit && vitest run --passWithNoTests --coverage",
-		"lint": "eslint ./src",
+		"lint": "eslint ./src --fix",
 		"format": "prettier ./src --write",
 		"clean": "rm -rf ./dist ./.turbo ./node_modules"
 	},
