--- a/source-code/client/package.json
+++ b/source-code/client/package.json
@@ -22,7 +22,7 @@
 		"clean": "rm -rf ./dist ./.turbo ./node_modules"
 	},
 	"dependencies": {
-		"@lix-js/fs": "workspace:*",
+		"@lix-js/fs": "*",
 		"@octokit/types": "11.1.0",
 		"isomorphic-git": "1.24.5",
 		"octokit": "3.1.0",
@@ -30,7 +30,7 @@
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
-		"@placeholder-company/js-code-style": "workspace:*",
+		"@placeholder-company/js-code-style": "*",
 		"@vitest/coverage-v8": "0.34.3",
 		"typescript": "5.2.2",
 		"vitest": "0.34.3"
