--- a/source-code/fs/package.json
+++ b/source-code/fs/package.json
@@ -25,7 +25,7 @@
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
-		"@placeholder-company/js-code-style": "workspace:*",
+		"@placeholder-company/js-code-style": "*",
 		"tsd": "^0.28.1",
 		"@vitest/coverage-v8": "0.34.3",
 		"typescript": "5.2.2",
