ts exclude forked iso git http client library

--- a/source-code/client/tsconfig.json
+++ b/source-code/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../tsconfig.base.json",
 	"include": ["src/**/*.ts"],
+	"exclude": ["src/http-client.js"],
 	"compilerOptions": {
 		"lib": ["ESNext", "DOM"],
 		"outDir": "./dist",
