--- a/source-code/server/tsconfig.json
+++ b/source-code/server/tsconfig.json
@@ -3,9 +3,7 @@
 	"include": ["src/**/*"],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
-		"types": ["vite/client"],
-		"jsx": "preserve",
-		"jsxImportSource": "solid-js",
+		"types": [],
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"outDir": "./dist",
