expose isogit internals
updated pr for folder renaming


Summary:

Test Plan:

--- a/packages/client/vendored/isomorphic-git/package.json
+++ b/packages/client/vendored/isomorphic-git/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isomorphic-git",
-  "version": "1.25.7-inlang",
+  "version": "v1.25.7-3-inlang",
   "description": "A pure JavaScript reimplementation of git for node and browsers",
   "type": "module",
   "typings": "./index.d.ts",
@@ -12,7 +12,7 @@
   },
   "sideEffects": false,
   "engines": {
-    "node": ">=12"
+    "node": "16"
   },
   "repository": {
     "type": "git",
