--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,12 @@
 		"clean": "rm -rf ./dist ./node_modules"
 	},
 	"dependencies": {
-		"@inlang/env-variables": "workspace:*",
 		"@inlang/telemetry": "workspace:*",
 		"@sentry/node": "^7.47.0",
 		"@sentry/tracing": "^7.47.0",
 		"compression": "^1.7.4",
 		"cookie-session": "2.0.0",
+		"dotenv": "^16.4.5",
 		"express": "4.18.2",
 		"jose": "4.15.4",
 		"node-fetch": "3.3.2",
