--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -17,16 +17,21 @@
 		"build": "tsc --build",
 		"dev": "tsc --watch",
 		"test": "vitest run --passWithNoTests --coverage",
-		"lint": "eslint ./src --fix",
+		"lint": "eslint src",
 		"format": "prettier ./src --write",
 		"clean": "rm -rf ./dist ./node_modules"
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
-		"@types/node": "20.8.10",
+		"eslint": "9.0.0",
+		"prettier": "2.8.3",
+		"@types/node": "20.12.7",
+		"@lix-js/code-style": "workspace:*",
 		"@vitest/coverage-v8": "0.34.3",
-		"tsd": "^0.28.1",
-		"typescript": "5.2.2",
-		"vitest": "0.34.3"
+		"vitest": "0.34.3",
+		"tsd": "0.31.0"
+	},
+	"dependencies": {
+		"typescript": "5.2.2"
 	}
 }
