--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,12 +23,17 @@
 		"cookie-session": "2.0.0",
 		"dotenv": "^16.4.5",
 		"express": "4.18.2",
+		"globals": "^15.0.0",
 		"jose": "4.15.4",
 		"node-fetch": "3.3.2",
 		"octokit": "3.1.2",
 		"tsx": "3.12.8"
 	},
 	"devDependencies": {
+		"eslint": "9.0.0",
+		"prettier": "2.8.3",
+		"@types/node": "20.12.7",
+		"@lix-js/code-style": "workspace:*",
 		"@types/compression": "^1.7.2",
 		"@types/cookie-session": "2.0.45",
 		"@types/express": "^4.17.17",
