--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -16,7 +16,7 @@
 		"drizzle-orm": "^0.31.2",
 		"human-id": "^4.1.1",
 		"kysely": "^0.27.4",
-		"sqlocal": "^0.10.1",
+		"sqlocal": "workspace: *",
 		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
