--- a/packages/sqlite-wasm-kysely-dialect/package.json
+++ b/packages/sqlite-wasm-kysely-dialect/package.json
@@ -16,20 +16,16 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@sqlite.org/sqlite-wasm": "^3.46.0-build2",
-    "coincident": "^1.2.3",
-    "nanoid": "^5.0.7"
+    "@sqlite.org/sqlite-wasm": "^3.46.0-build2"
   },
   "devDependencies": {
     "@vitest/browser": "^1.6.0",
     "kysely": "^0.27.4",
     "prettier": "^3.3.2",
-    "taze": "^0.14.2",
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
     "vitest": "^1.6.0",
-    "webdriverio": "^8.39.1",
-    "wrangler": "^3.63.1"
+    "webdriverio": "^8.39.1"
   },
   "peerDependencies": {
     "kysely": "*"
