chore: rename to just wasm-kysely
we will likely add more features than just the dialect

--- a/packages/sqlite-wasm-kysely/package.json
+++ b/packages/sqlite-wasm-kysely/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqlite-wasm-kysely-dialect",
+  "name": "sqlite-wasm-kysely",
   "version": "0.1.0",
   "type": "module",
   "exports": {
