--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"kysely": "^0.27.4",
+		"minimatch": "^10.0.1",
 		"prettier": "^3.3.3",
 		"sqlite-wasm-kysely": "workspace: *",
 		"uuid": "^10.0.0"
