--- a/packages/sdk/examples/server-protocol-handler-hono/tsconfig.json
+++ b/packages/sdk/examples/server-protocol-handler-hono/tsconfig.json
@@ -1,10 +1,15 @@
 {
-	"include": ["src/**/*"],
+	"include": [
+		"src/**/*"
+	],
 	"compilerOptions": {
 		"allowImportingTsExtensions": false,
 		"emitDeclarationOnly": false,
 		"module": "Node16",
-		"lib": ["ESNext", "DOM"],
+		"lib": [
+			"ESNext",
+			"DOM"
+		],
 		"outDir": "./dist",
 		"rootDir": "./src"
 	}
