--- a/packages/sdk-rust-engine-node/native/lix-engine/Cargo.toml
+++ b/packages/sdk-rust-engine-node/native/lix-engine/Cargo.toml
@@ -12,4 +12,6 @@ name = "lix-engine-router"
 path = "src/main.rs"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sqlparser = "0.53.0"
