--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "pnpm exec nx run-many --target=format --parallel",
     "clean": "pnpm recursive run clean && rm -rf ./.env ./node_modules",
     "----- CI ---- used to test the codebase on every commit": "",
-    "ci": "pnpm lint && pnpm test && pnpm build"
+    "ci": "pnpm lint && pnpm test && pnpm build",
+    "ci:rust-rollout-gates": "node ./scripts/check-rust-rollout-gates.mjs"
   },
   "packageManager": "pnpm@10.23.0",
   "engines": {
