--- a/packages/sdk-rust-engine-node/native/lix-engine/Cargo.toml
+++ b/packages/sdk-rust-engine-node/native/lix-engine/Cargo.toml
@@ -12,6 +12,8 @@ name = "lix-engine-router"
 path = "src/main.rs"
 
 [dependencies]
+cel-interpreter = "0.9.0"
+jsonschema = "0.18.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlparser = "0.53.0"
